--- a/mysite/mainApp/templates/mainApp/homePage.html
+++ b/mysite/mainApp/templates/mainApp/homePage.html
@@ -2,4 +2,5 @@
 
 {% block content %}
 <p>Проверка работоспособности</p>
-	{% endblock %}
+{% include "mainApp/includes/some_html.html" %}
+	{% endblock %}}
